force-app/main/default/objects/ITB_with_Sub_Contract_18__c.object
<CustomObject>
    <fields>
        <fullName>BE_ITB_Subcontract_10_ID__c</fullName>
        <label>BE ITB Subcontract 10 ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITB_Construction_File_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ไฟล์ของมูล ITB ของการทำ Construction</inlineHelpText>
        <label>ITB (Construction) File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ITB_Construction_File_URL__c</fullName>
        <formula>IF( AND(ITB_Construction_URL__c == null, Not_Applicable__c == false), &quot;No File&quot; , IF(Not_Applicable__c == true, &quot;Not Applicable&quot; , HYPERLINK(ITB_Construction_URL__c, &quot;Open File&quot;,&quot;_self&quot;)))</formula>
        <label>ITB (Construction) File URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITB_Construction_URL__c</fullName>
        <label>ITB Construction URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITB_Engineering_File_URL__c</fullName>
        <formula>IF( AND(ITB_Engineering_URL__c == null, ITB_Engineering_Not_Applicable__c == false), &quot;No File&quot; , IF(ITB_Engineering_Not_Applicable__c == true, &quot;Not Applicable&quot; , HYPERLINK(ITB_Engineering_URL__c, &quot;Open File&quot;,&quot;_self&quot;)))</formula>
        <label>ITB (Engineering) File URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITB_Engineering_Not_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BE ITB (Engineering) Not Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ITB_Engineering_URL__c</fullName>
        <label>ITB Engineering URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITB_Standard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ITB Standard</label>
        <referenceTo>ITB_Standard_18__c</referenceTo>
        <relationshipName>ITB_with_Sub_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Not_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Applicable</label>
        <type>Checkbox</type>
    </fields>
    <label>ITB with Sub Contract*</label>
    <nameField>
        <label>Subcontract Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>